git commit --amend

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <H1>FORMULÁRIO</H1>
 <form>
-    <input type="nome" placeholder="nome"/>
+    <input type="texto" placeholder="nome"/>
     <br>
-    <input type="email" placeholder="email"/>
+    <label for="email">"email"</label>
+    <input id="text" type="email">
     <br/>
-    <input type="senha" placeholder="senha"/>
+    <input type="password" placeholder="senha"/>
     <br>
     <button type="submit">
         efetuar o cadastro
