--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <form>
     <input type="texto" placeholder="nome"/>
     <br>
-    <label for="email">"email"</label>
-    <input id="text" type="email">
+    <label for="email">email</label>
+    <input type="text" id="text" name="email"/>
     <br/>
     <input type="password" placeholder="senha"/>
     <br>
