--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <H1>FORMULÁRIO</H1>
 <form>
-    <input type="texto" placeholder="nome"/>
+    <label for="name">Nome</label>
+    <input type="text" placeholder="nome"/>
     <br>
     <label for="email">email</label>
-    <input type="text" id="text" name="email"/>
+    <input type="text" placeholder="email"/>
     <br/>
+    <label for="password">Senha</label>
     <input type="password" placeholder="senha"/>
     <br>
     <button type="submit">
